<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/imgPayahRounded"
        android:layout_width="@dimen/dimen_100"
        android:layout_height="@dimen/dimen_100"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_payah_rounded" />

    <ImageView
        android:id="@+id/tvPayahLabelDrak"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_40"
        android:layout_below="@id/imgPayahRounded"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_5"
        android:src="@drawable/ic_payah_label_dark" />

    <EditText
        android:layout_marginLeft="@dimen/dimen_100"
        android:id="@+id/editLoginId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:background="@drawable/edittext_box"
        android:hint="@string/hint_login_id" />

    <EditText
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginLeft="@dimen/dimen_100"
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editLoginId"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:background="@drawable/edittext_box"
        android:hint="@string/hint_password" />

    <TextView
        android:id="@+id/tvForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/editPassword"
        android:layout_below="@+id/editPassword"
        android:layout_marginTop="@dimen/dimen_5"
        android:text="@string/button_forget_password"
        android:textColor="@android:color/black"
        android:textSize="10sp" />

    <Button
        android:textSize="@dimen/button_text_size"
        android:id="@+id/btn_loging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editLoginId"
        android:layout_below="@+id/tvForgetPassword"
        android:background="@drawable/button_black"
        android:text="@string/button_login"
        android:textColor="@color/colorAccent" />

    <TextView

        android:id="@+id/tvNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSignUp"
        android:layout_centerHorizontal="true"
        android:text="@string/hint_new_user"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:layout_marginLeft="@dimen/dimen_100"
        android:background="@drawable/button_teal"
        android:text="@string/button_signup"
        android:textSize="@dimen/button_text_size" />


</RelativeLayout>