<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dividerHistory">
    <android.support.constraint.Guideline
        android:id="@+id/guide_hor_line_22percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTealDark"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginLeft="@dimen/dimen_20"
        android:layout_marginStart="@dimen/dimen_20"
        android:text="@string/topup_title"
        android:textSize="@dimen/dimen_20"
        android:textStyle="bold"/>

    <android.support.constraint.Guideline
        android:id="@+id/guide_hor_line_44percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_ver_line_15percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_ver_line_85percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_ver_line_35percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="269dp" />
    <android.support.constraint.Guideline
        android:id="@+id/guide_ver_line_65percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <RelativeLayout android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guide_hor_line_44percent"
        app:layout_constraintLeft_toRightOf="@id/guide_ver_line_15percent"
        app:layout_constraintRight_toRightOf="@id/guide_ver_line_85percent"
        app:layout_constraintTop_toBottomOf="@id/guide_hor_line_22percent"
        android:background="@color/colorAbsoluteWhite"
        android:gravity="center">

        <TextView
            android:id="@+id/textview_current_value_topup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textview_current_title"
            android:text="@string/balance_default_value"
            android:textColor="@color/colorTealDark"
            android:textSize="60dp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/textview_current_topup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-30sp"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_currency"
            android:gravity="center_vertical"
            android:text="@string/balance_default_currency"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_8"
        android:text="@string/balance_current_title"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/guide_hor_line_22percent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_topup_main_topup"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_30"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_teal"
        android:text="@string/button_topup"
        android:textSize="@dimen/dimen_20"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintLeft_toLeftOf="@id/guide_ver_line_35percent"
        app:layout_constraintRight_toRightOf="@id/guide_ver_line_65percent"
        app:layout_constraintTop_toBottomOf="@id/guide_hor_line_44percent" />

</android.support.constraint.ConstraintLayout>