<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContainerMainActivity">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_marginTop="@dimen/dimen_5"
                android:layout_marginBottom="@dimen/dimen_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_payah_label_light" />
        </FrameLayout>
    </android.support.v7.widget.Toolbar>
        <android.support.constraint.Guideline
            android:id="@+id/guide_hor_line_10percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />
        <!--<LinearLayout-->
            <!--android:id="@+id/layout_menu_top"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:divider="@color/dividerTopBar"-->
            <!--android:orientation="horizontal"-->
            <!--app:layout_constraintBottom_toTopOf="@id/guide_hor_line_10percent"-->
            <!--app:layout_constraintTop_toTopOf="parent">-->

            <!--<Button-->
                <!--android:id="@+id/button_top_scan"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@color/backgroundTopBar"-->
                <!--android:drawableTop="@drawable/ic_menu_scan"-->
                <!--android:text="@string/menu_top_scan" />-->

            <!--<Button-->
                <!--android:id="@+id/button_top_topup"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@color/backgroundTopBar"-->
                <!--android:drawableTop="@drawable/ic_menu_topup"-->
                <!--android:text="@string/menu_top_topup" />-->

            <!--<Button-->
                <!--android:id="@+id/button_top_pay"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@color/backgroundTopBar"-->
                <!--android:drawableTop="@drawable/ic_menu_pay"-->
                <!--android:text="@string/menu_top_pay" />-->

            <!--<Button-->
                <!--android:id="@+id/button_top_transfer"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@color/backgroundTopBar"-->
                <!--android:drawableTop="@drawable/ic_menu_transfer"-->
                <!--android:text="@string/menu_top_transfer" />-->
        <!--</LinearLayout>-->

    <!--<FrameLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:id="@+id/layout_container_main"-->
        <!--android:layout_height="0dp"-->
        <!--app:layout_constraintTop_toBottomOf="@id/layout_menu_top"-->
        <!--app:layout_constraintBottom_toTopOf="@id/layout_menu_bottom"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/layout_menu_bottom"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/layout_menu_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:divider="@color/dividerTopBar"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_top_scan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/backgroundTopBar"
                android:drawableTop="@drawable/ic_menu_scan"
                android:text="@string/menu_top_scan" />

            <Button
                android:id="@+id/button_top_topup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/backgroundTopBar"
                android:drawableTop="@drawable/ic_menu_topup"
                android:text="@string/menu_top_topup" />

            <Button
                android:id="@+id/button_top_pay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/backgroundTopBar"
                android:drawableTop="@drawable/ic_menu_pay"
                android:text="@string/menu_top_pay" />

            <Button
                android:id="@+id/button_top_transfer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/backgroundTopBar"
                android:drawableTop="@drawable/ic_menu_transfer"
                android:text="@string/menu_top_transfer" />
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:id="@+id/layout_container_main"
            android:layout_height="0dp"
            android:layout_weight="9"
            app:layout_constraintTop_toBottomOf="@id/layout_menu_top"
            app:layout_constraintBottom_toTopOf="@id/layout_menu_bottom"/>
    </LinearLayout>




    <LinearLayout
        android:id="@+id/layout_menu_bottom"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@color/backgroundBottomBar" />

        <Button
            android:id="@+id/button_bot_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="29"
            android:background="@color/backgroundBottomBar"
            android:drawableTop="@drawable/ic_navi_home"
            android:text="@string/menu_bottom_home"
            android:textColor="@color/colorSecondaryAccent" />

        <Button
            android:id="@+id/button_bot_history"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="29"
            android:background="@color/backgroundBottomBar"
            android:drawableTop="@drawable/ic_navi_history"
            android:text="@string/menu_bottom_history"
            android:textColor="@color/colorSecondaryAccent" />

        <Button
            android:id="@+id/button_bot_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="29"
            android:background="@color/backgroundBottomBar"
            android:drawableTop="@drawable/ic_navi_me"
            android:text="@string/menu_bottom_me"
            android:textColor="@color/colorSecondaryAccent" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@color/backgroundBottomBar" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>